2017-02-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/CMakeLists.txt: Install scanneraux.h

2017-02-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c: Include scanneraux.h.

2017-02-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/scanneraux.h: New. This is for auxiliary stucts.

	* COPYING: Add new file.

2017-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/test_ipv6_packet_forgery.nasl: Deleted. Moved to 'examples'
	directory in the 'openvas-nvts' SVN repository.

2017-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Remove references to irrelevant documentation
	prerequisites.

2017-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Remove now superfluous checks for
	libopenvas_wmiclient and libopenvas_wincmd. The checks are now longer
	needed since the code using them has moved to openvas-libraries.

2017-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* COPYING: List correct license for misc/CMakeLists.txt.

2017-02-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (proto_post_wrapped, plug_get_key)
	(get_plugin_preference_file_content, get_plugin_preference_file_size):
	Adjust to change of globals from arglist to struct scan_globals.

2017-02-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* INSTALL: Remove bison, flex, libpcap, libssh, libksba to the list
	of prerequisites since nasl is now  . Remove recommendations
	to have WMI and improved SNMP support. Remove prerequisites from the
	apt-install command. Leave only 'misc' and delete 'base' from the
	instruction to link the library statically.

	* CMakeLists.txt: Remove all related to libsnmp since it was used only for
	nasl module and it was moved to openvas-scanner.

2017-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Remove 'base' from Doxygen
	input directories.
